--- a/News-Articles/LootBet-CS2-Shanghai-Major/index.html
+++ b/News-Articles/LootBet-CS2-Shanghai-Major/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
