--- a/News-Articles/LootBet-Blast/index.html
+++ b/News-Articles/LootBet-Blast/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "LootBet Blast",
-            "item": "https://www.all4wins.com/News/LootBet-Blast/"
+            "item": "https://www.all4wins.com/News-Articles/LootBet-Blast/"
           }
         ]
       }
